k8/hello-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: angi
  labels:
    app: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: snarlaa/helloapp:version2
        ports:
        - containerPort: 80
